--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mongodb",
   "version": "1.0.0",
   "description": "mongodb with node.js",
-  "main": "./src/index.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   },
   "author": "",
   "license": "ISC",
