--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/server.js",
-    "dev": "nodemon --ignore client.js ./src/server.js",
+    "dev": "env-cmd nodemon --ignore client.js ./src/server.js",
     "client": "nodemon ./src/frontend/client.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "faker": "^5.5.3",
     "mongoose": "^6.5.0"
